gcc/testsuite/rust/rustc/ui/codemap_tests/tab_2.rs
// ignore-tidy-tab

fn main() {
				"""; // { dg-error ".E0765." "" { target *-*-* } }
}

